--- a/KeryxPars.MessageViewer/KeryxPars.MessageViewer.Client/Layout/NavMenu.razor
+++ b/KeryxPars.MessageViewer/KeryxPars.MessageViewer.Client/Layout/NavMenu.razor
@@ -1,7 +1,7 @@
 ﻿<nav class="top-navbar">
     <div class="navbar-container">
         <div class="navbar-brand">
-            <span class="bi bi-clipboard-pulse"></span>
+            <img src="logo-nav.svg" alt="KeryxPars Logo" class="brand-logo" />
             <span class="brand-text">KeryxPars</span>
             <span class="brand-subtext">Message Viewer</span>
         </div>
