--- a/KeryxPars.MessageViewer/KeryxPars.MessageViewer.Client/Layout/NavMenu.razor
+++ b/KeryxPars.MessageViewer/KeryxPars.MessageViewer.Client/Layout/NavMenu.razor
@@ -31,6 +31,9 @@
             </a>
         </div>
     </div>
+    
+    <!-- Mobile menu backdrop -->
+    <div class="mobile-backdrop @(collapseNavMenu ? "collapsed" : "")" @onclick="CloseNavMenu"></div>
 </nav>
 
 @code {
@@ -46,4 +49,5 @@
         collapseNavMenu = true;
     }
 }
+
 
